--- a/soccer.css
+++ b/soccer.css
@@ -127,8 +127,6 @@ main{
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    align-content: center;
-    justify-content: center;
     width: 100%;
     height: 100%;
     background-color: rgb(219, 219, 219);
@@ -410,7 +408,7 @@ main{
     }
 
     .sidebar {
-        height: 220px;
+        width: calc(100% - 340px);
     }
 
     .interacao {
