--- a/soccer.css
+++ b/soccer.css
@@ -137,12 +137,19 @@ main{
     padding: 1.5rem;
     text-align: center;
     transition: transform 0.2s ease-in-out;
-    display: flex;
+    display: flex;;
     flex-direction: column;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: space-around;
     gap: 0.8rem;
     border: 4px solid rgb(148, 0, 148);
+}
+
+.sidebar div{
+    height: 100%;
+    padding: 0%;
+    display: flex;
+    justify-content: flex-end;    
 }
   
   .sidebar:hover {
@@ -150,31 +157,26 @@ main{
   }
   
   .sidebar img {
-    width: calc(100% - 4.15rem);
-    height: auto;
+    width: calc(100% - 120px);
+    height: cal();
     border-radius: 12px;
     object-fit: cover;
   }
   
-  .sidebar h2 {
+  .descrição {
     font-size: 1.2rem;
     color: #222;
     margin: 0.5rem 0;
   }
   
-  .sidebar p {
-    font-size: 0.95rem;
-    color: #555;
-    margin: 0;
-  }
-  
-  .sidebar .price {
-    color: #1a8917;
+  .preço {
+    color: #906afb;
+    opacity: 0.6;
     font-size: 1.1rem;
     font-weight: bold;
   }
   
-  .sidebar button {
+  .btn{
     width: 110px;
     padding: 0.6rem 1rem;
     background: #2e3760;
@@ -186,14 +188,11 @@ main{
     transition: background 0.2s ease;
   }
   
-  .sidebar button:hover {
-    background: #5d63a0;
+  .btn:hover{
+    background-color: #5d63a0;
+    transform: scale(1.1);
+    transition: trasnform(0.3s);
   }
-
-
-.sidebar a:hover{
-    color: rgb(82, 165, 255);
-}
 
 .footer{
     background-color: blueviolet;
@@ -302,7 +301,7 @@ main{
     width: 98%;
 }
 
-  @media screen and (max-width: 768px) {
+  @media screen and (max-width: 640px) {
     body{
         margin: 0;
     }
@@ -429,15 +428,17 @@ main{
     }
 
     main {
-        align-items: center;
-        flex-wrap: wrap;
+        width: 100%;
     }
 
-
     .sidebar {
-        width: 80px;
-        height: 260px;
-        flex-basis: 200;
+        width: 100%;
+        max-width: 320px;
+    }
+
+    .sidebar img{
+        width:115px;
+        padding: 4px 0px;
     }
     
     .sidebar h2 {
@@ -448,6 +449,10 @@ main{
         font-size: 0.9rem;
     }
     
+    .sidebar button{
+        position: relative;
+        top: -1%;
+    }
 
     .interacao {
         flex-direction: column;
